@@ -48,6 +48,9 @@ android {
     testOptions {
         unitTests.includeAndroidResources = true
         unitTests.returnDefaultValues = true
+        unitTests.all {
+            jvmArgs '-Dnet.bytebuddy.experimental=true'
+        }
     }
 }
 
